contact view model completed

--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -21,7 +21,7 @@ th:fragment="parent(content , title , script)"
 
     
 </head>
-<body class="bg-gray-100 dark:bg-gray-900  dark:text-white" >
+<body class="bg-white dark:bg-gray-900  dark:text-white" >
     
 
     <!-- header content starts -->
