--- a/src/main/resources/templates/user/view_contacts.html
+++ b/src/main/resources/templates/user/view_contacts.html
@@ -153,15 +153,18 @@
 
                     <td class="px-6 py-4">
                       <div>
+                        <!-- view contact button -->
                         <button
                          th:onclick="loadContactData([[${c.id}]])">
                           <i class="fa-solid fa-eye"></i>
                         </button>
                        
-                        <a href="#" class="px-0.5">
+                        <!-- update contact button -->
+                        <a th:href="'/user/contacts/updateView/'+${c.id}" class="px-0.5">
                           <i class="fa-solid fa-pen-to-square"></i>
                         </a>
 
+                        <!-- delete contact button -->
                         <button th:onclick="deleteContact([[${c.id}]])">
                           <i class="fa-solid fa-trash"></i>
                         </button>                   
