--- a/src/main/resources/templates/user/updateFormView.html
+++ b/src/main/resources/templates/user/updateFormView.html
@@ -24,7 +24,8 @@
             <div
               class="card block p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
             >
-
+            
+            <!-- message area -->
             <div th:replace="message::messageblock"></div>
 
               <h1 class="text-2xl font-semibold">Update Your Contact</h1>
