--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -23,11 +23,60 @@
     </div>
 
     <!-- main content -->
-	<div class="sm:pl-64 pt-20 mt-10">
+	<div class="sm:pl-64 pt-20 mt-7">
 		
-<div class="text-center" style="height: 1000px;">
-  <h1 class=" text-5xl">Welcome to Profile Page</h1>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, illo!</p>
+<div class="text-center" >
+
+
+  <div class="container mx-auto p-5">
+    <div class="max-w-lg mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden">
+        <div class="bg-gray-100 dark:bg-gray-700 p-4">
+            <h2 class="text-2xl font-bold text-gray-700 dark:text-white">Profile</h2>
+        </div>
+        <div class="p-4">
+            <div class="flex flex-col items-center">
+                <img 
+                onerror="this.src='/images/default.jpg'"
+                data-th-src="@{${loggedInUser.profilePic}}" 
+                alt="Profile Picture" 
+                class="object-cover mb-4  h-12 me-3 sm:h-20 rounded-full">
+
+                <h3 class="text-xl font-semibold text-gray-800 dark:text-white" th:text="${loggedInUser.name}">{{name}}</h3>
+
+                <p class="text-gray-600 dark:text-gray-300" th:text="${loggedInUser.email}">{{email}}</p>
+
+            </div>
+
+            <div class="mt-6">
+
+                <h4 class="text-lg font-semibold text-gray-700 dark:text-white">About</h4>
+
+                <p class="text-gray-600 dark:text-gray-300 mt-2" th:text="${loggedInUser.about}">{{about}}</p>
+
+            </div>
+
+            <div class="mt-6">
+                
+              <h4 class="text-lg font-semibold text-gray-700 dark:text-white">Phone Number</h4>
+                
+              <p class="text-gray-600 dark:text-gray-300 mt-2" th:text="${loggedInUser.phoneNumber}">{{phoneNumber}}</p>
+           
+            </div>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-700 p-4">
+          <div class="button-container text-center">
+            <button type="submit" class="px-3 py-2 rounded bg-gray-700  dark:bg-blue-600 hover:dark:bg-blue-700   text-white">Update</button>
+            <button type="reset" class="px-3 py-2 rounded dark:bg-blue-600 hover:dark:bg-blue-700 bg-yellow-500 hover:bg-yellow-600 text-white">Reset</button>
+        </div>
+      </div>
+    </div>
+</div>
+ 
+    
+ 
+  
+
 </div>		
 	  
 </div>
