--- a/src/main/resources/templates/user/view_contacts.html
+++ b/src/main/resources/templates/user/view_contacts.html
@@ -6,7 +6,7 @@
 >
   <head>
     <meta charset="UTF-8" />
-    <title th:text="${loggedInUser.name}+' | '+Dashboard">All Contacts</title>
+    <title>All Contacts</title>
   </head>
 
   <body>
@@ -23,64 +23,76 @@
           <p class="text-center text-gray-500">List of all contacts..</p>
           <div class="contacts-container p-3">
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-              <form
-                th:action="@{'/user/contacts/search'}"
-                th:object="${searchFormData}"
-              >
-                <div
-                  class="space-x-3 flex items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900"
+              <div class="flex justify-between items-baseline">
+                <form
+                  th:action="@{'/user/contacts/search'}"
+                  th:object="${searchFormData}"
                 >
-                  <div class="select-container">
-                    <select
-                      th:field="*{field}"
-                      id="countries_disabled"
-                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    >
-                      <option selected value="">Select Field</option>
-                      <option value="name">Name</option>
-                      <option value="phoneNumber">Phone</option>
-                      <option value="email">Email</option>
-                    </select>
-                  </div>
-
-                  <label for="table-search" class="sr-only">Search</label>
-                  <div class="relative">
-                    <div
-                      class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none"
-                    >
-                      <svg
-                        class="w-4 h-4 text-gray-500 dark:text-gray-400"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 20 20"
-                      >
-                        <path
-                          stroke="currentColor"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          stroke-width="2"
-                          d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-                        />
-                      </svg>
-                    </div>
-                    <input
-                      th:field="*{keyword}"
-                      type="text"
-                      id="table-search-users"
-                      class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                      placeholder="Search for users"
-                    />
-                  </div>
-
-                  <button
-                    type="submit"
-                    class="px-2 py-1 bg-gray-700 text-white rounded"
+                  <div
+                    class="space-x-3 flex items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900"
                   >
-                    Search
+                    <div class="select-container">
+                      <select
+                        th:field="*{field}"
+                        id="countries_disabled"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      >
+                        <option selected value="name">Select Field</option>
+                        <option value="name">Name</option>
+                        <option value="phoneNumber">Phone</option>
+                        <option value="email">Email</option>
+                      </select>
+                    </div>
+
+                    <label for="table-search" class="sr-only">Search</label>
+                    <div class="relative">
+                      <div
+                        class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none"
+                      >
+                        <svg
+                          class="w-4 h-4 text-gray-500 dark:text-gray-400"
+                          aria-hidden="true"
+                          xmlns="http://www.w3.org/2000/svg"
+                          fill="none"
+                          viewBox="0 0 20 20"
+                        >
+                          <path
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+                          />
+                        </svg>
+                      </div>
+                      <input
+                        th:field="*{keyword}"
+                        type="text"
+                        id="table-search-users"
+                        class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Search for users"
+                      />
+                    </div>
+
+                    <button
+                      type="submit"
+                      class="px-2 py-1 bg-gray-700 text-white rounded"
+                    >
+                      Search
+                    </button>
+                  </div>
+                </form>
+
+                <div class="export-contacts p-3 m-3">
+                  <button
+                    type="button"
+                    onclick="exportContacts()"
+                    class="px-2 py-1 text-white rounded bg-yellow-400 hover:bg-gray-900 focus:ring-4 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                  >
+                    Export
                   </button>
                 </div>
-              </form>
+              </div>
 
               <table
                 th:if="${pageContact.totalElements>0}"
@@ -154,21 +166,22 @@
                     <td class="px-6 py-4">
                       <div>
                         <!-- view contact button -->
-                        <button
-                         th:onclick="loadContactData([[${c.id}]])">
+                        <button th:onclick="loadContactData([[${c.id}]])">
                           <i class="fa-solid fa-eye"></i>
                         </button>
-                       
+
                         <!-- update contact button -->
-                        <a th:href="'/user/contacts/updateView/'+${c.id}" class="px-0.5">
+                        <a
+                          th:href="'/user/contacts/updateView/'+${c.id}"
+                          class="px-0.5"
+                        >
                           <i class="fa-solid fa-pen-to-square"></i>
                         </a>
 
                         <!-- delete contact button -->
                         <button th:onclick="deleteContact([[${c.id}]])">
                           <i class="fa-solid fa-trash"></i>
-                        </button>                   
-                    
+                        </button>
                       </div>
                     </td>
                   </tr>
@@ -221,17 +234,30 @@
           >
             No Contacts Found
           </h1>
+
+
+          <!--Hidden table for downloading purpose  model  -->
+     <div th:replace="~{user/HiddenTable :: dowloadAble-table}"></div>
+
         </div>
+
 
         <!-- view contact  model  -->
         <div th:replace="~{user/view_contact_modal :: contact-modal}"></div>
 
+       
+
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@linways/table-to-excel@1.0.4/dist/tableToExcel.min.js"></script>
     <script data-th-src="@{/js/contacts.js}"></script>
+
     <script>
       console.log("this is script of profile page");
+
+      
+
     </script>
   </body>
 </html>
